--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,6 +8,16 @@ body{
 section{
 	padding: 20px 0px;
 }
+
+.card{
+	background-color:white;
+	padding:20px;
+	border-radius: 2px;
+	margin:10px 0px 0px 0px;
+	box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+	transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+}
+
 /* Navbar */
 nav.navbar{
 	border: 0px;
@@ -144,7 +154,11 @@ section#brand-title h2{
 #objectives .jumbo{
 	padding: 0px;
 }
+/* Timetable */
+section.time-table {
+	margin-bottom: 20px;
 
+}
 /* LG */
 /* Large Devices, Desktops */
 @media only screen and (max-width : 1200px) {
