--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,10 +5,11 @@ body{
 	font-size: 16px;
 }
 
-section{
-	padding: 20px 0px;
+section h2.section-head{
+	font-weight: 100;
+	text-align: center;
+	font-size: 34px;
 }
-
 .card{
 	background-color:white;
 	padding:20px;
@@ -56,7 +57,7 @@ nav.navbar a.navbar-brand:hover,
 nav.navbar .nav li a:hover{
 	color: #fff;
 }
-nav.navbar .nav li a:hover,
+
 nav.navbar .nav li a:active,
 nav.navbar .nav li a:focus,
 nav.navbar .nav li a:visited,
@@ -91,11 +92,84 @@ nav.navbar .nav li.open>a:active:visited
 	background-color: #da251c;
 }
 
+
+section#mission-and-vision{
+	padding: 20px 0px;
+}
+
+section#why-us{
+	color: white;
+	margin-top: 30px;
+}
+section#why-us .container{
+	background-color: #403f4c;
+	padding: 20px;
+}
+section#why-us .highlights .highlight{
+	padding: 10px;
+}
+section#why-us .highlights .highlight h4{
+	text-align: center;
+}
+section#why-us .highlights .highlight .symbol{
+	padding: 20px;
+}
+section#why-us .highlights .highlight img{
+	width: 100%;
+}
+
+/* Mission and Vision */
+section#mission-and-vision{
+	color: #fff;
+	background-color: #403f4c;
+}
+section#mission-and-vision p{
+	text-align: justify;
+}
+
+/* Brand Title */
+section#brand-title{
+	text-align: center;
+	background-color: #da251c;
+	color: white;
+	padding: 20px 0px;
+}
+section#brand-title h1{
+	text-transform: uppercase;
+	margin: 5px auto;
+}
+section#brand-title h2{
+	font-size: 22px;
+	font-weight: 300;
+	margin-top: 0px;
+}
+
+/* Objectives */
+section#objectives .objective{
+	text-align: justify;
+	padding:40px 40px;
+	color: white;
+	min-height: 380px;
+}
+section#objectives .objective:nth-child(1){
+	background-color: #015198;
+}
+section#objectives .objective:nth-child(2){
+	background-color: #da251c;
+}
+
+/* Timetable */
+section.time-table {
+	margin-bottom: 20px;
+
+}
+
 /* Footer */
 footer{
 	background-color: #015198;
 	color: white;
 	padding-top: 30px;
+	margin-top: 20px;
 }
 footer ul{
 	padding-left:0px;
@@ -106,81 +180,24 @@ footer li a:hover{
 	color: white;
 	text-decoration: none;
 }
-section#why-us{
-	background-color: #403f4c;
-	color: white;
-}
 
-section#mission-and-vision{
-	color: #fff;
-	background-color: #403f4c;
-}
 
-section#brand-title{
-	text-align: center;
-	background-color: #da251c;
-	color: white;
-	padding: 20px 0px;
-}
-section#brand-title h1{
-	margin: 5px auto;
-}
-section#brand-title h2{
-	font-size: 22px;
-	font-weight: 300;
-	margin-top: 0px;
-}
-#objectives .row:first-child{
-	margin-bottom: 30px;
-}
-#objectives .row:not(:first-child){
-	background-color: green;
-}
-#objectives .row:nth-child(2),
-#objectives .row:nth-child(4){
-	background-color: #015198;
-}
-#objectives .row:nth-child(3){
-	background-color: #da251c;
-}
-#objectives .row p{
-	color: #fff;
-}
-
-#objectives .objective{
-	font-size: 16px;
-	padding: 110px 70px;
-}
-#objectives .jumbo{
-	padding: 0px;
-}
-/* Timetable */
-section.time-table {
-	margin-bottom: 20px;
-
-}
 /* LG */
 /* Large Devices, Desktops */
 @media only screen and (max-width : 1200px) {
-	#objectives .objective{
-		padding: 80px 40px;
-	}
+
 }
 
 /* MD */
 /* Medium Devices, Desktops */
 @media only screen and (max-width : 992px) {
-	#objectives .objective{
-		padding: 30px 10px;
-	}
+
 }
 
 /* SM */
 /* Small Devices, Tablets */
 @media only screen and (max-width : 768px) {
-	#objectives .objective{
-		padding: 15px 10px;
-	}
+
 }
 
 /* XS */
