--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -137,13 +137,12 @@ section#courses-offered h2.section-head{
 	color: white;
 }
 section#courses-offered .course{
+	margin-top: 10px;
 	padding: 20px;
 	background-color: rgba(255, 255, 255, 0.9);
 	box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
 	transition: all 0.3s cubic-bezier(.25,.8,.25,1);
 }
-
-
 
 /* Mission and Vision */
 section#mission-and-vision{
