--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -268,6 +268,9 @@ footer{
 	padding-top: 30px;
 	margin-top: 20px;
 }
+footer p.title{
+	font-weight: bold;
+}
 footer ul{
 	padding-left:0px;
 	list-style: none; 
