--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -144,6 +144,17 @@ section#courses-offered .course{
 	transition: all 0.3s cubic-bezier(.25,.8,.25,1);
 }
 
+/* Trusted Partners */
+section#trusted-partners .partner{
+	padding: 10px;
+}
+section#trusted-partners .partner img{
+	box-shadow: 0 1px 3px rgba(0,0,0,0.1), 0 1px 2px rgba(0,0,0,0.1);
+	transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+	width: 100%;
+}
+
+
 /* Mission and Vision */
 section#mission-and-vision{
 	color: #fff;
