--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -131,7 +131,7 @@ section#courses-offered{
 	-webkit-background-size: cover;
 	background-size: cover;
 	background-position: center center;
-	padding: 60px 0px;
+	padding: 120px 0px;
 }
 section#courses-offered h2.section-head{
 	color: white;
@@ -185,7 +185,8 @@ section#brand-title h2{
 section#achievements .container{
 	background-color: #015198;
 	color: white;
-	padding: 30px 0px;
+	padding-top: 30px;
+	padding-bottom: 30px;
 }
 section#achievements .achievement{
 	text-align: center;
@@ -231,6 +232,39 @@ section#objectives .objective:nth-child(1){
 }
 section#objectives .objective:nth-child(2){
 	background-color: #da251c;
+}
+
+/* Testimonial */
+section#testimonials .students-container{
+	height: 500px;
+}
+section#testimonials img.students{
+	width: 100%;
+}
+section#testimonials div>div>div{
+	padding: 0px;
+}
+section#testimonials .slider{
+	background-color: red;
+	height: 500px;
+}
+section#testimonials .item{
+padding: 100px;
+color: white;
+}
+section#testimonials .item p.content{
+	font-size: 32px;
+}
+section#testimonials .item h5:before{
+	content: "-";
+}
+section#testimonials .item h5{
+	font-size: 16px;
+	margin-bottom: 0px;
+}
+section#testimonials p.course{
+	font-size: 14px;
+	font-weight: 100;
 }
 
 /* Recent Placements */
