--- a/assets/css/bootstrap-theme.css
+++ b/assets/css/bootstrap-theme.css
@@ -3,7 +3,84 @@
 body{
 	background-color:#fafaff;
 	font-family: 'Ubuntu', sans-serif;
+	background-color: #fafaff;
+	font-size: 16px;
+	line-height: 1.25;
 }
+
+/* Navbar */
+nav.navbar{
+	border: 0px;
+	background-color: #da251c;
+	border-radius: 0px;
+	margin-bottom: 0px;
+}
+.btn-blue,.btn-red,
+.btn-blue:hover,.btn-red:hover{
+	color: #fff;
+	border-radius: 0px;
+}
+.btn-blue:hover,.btn-red:hover{
+	border-color: #eee;
+}
+.btn-blue{
+	background-color: #015198;
+	border-color: #015198;
+}
+.btn-red{
+	background-color: #da251c;
+	border-color: #da251c;	
+}
+nav.navbar .nav li a,
+nav.navbar a.navbar-brand{
+	color: #fff;
+}
+nav.navbar .nav li.active a{
+	background-color: #015198;
+	color: #fff;
+}
+nav.navbar a.navbar-brand{
+	font-weight: bold;
+}
+nav.navbar a.navbar-brand:hover,
+nav.navbar .nav li a:hover{
+	color: #fff;
+}
+
+nav.navbar .nav li a:active,
+nav.navbar .nav li a:focus,
+nav.navbar .nav li a:visited,
+nav.navbar .nav li.open>a:focus,
+nav.navbar .nav li.open>a:active,
+nav.navbar .nav li.open>a:active:visited
+.navbar-nav > li > .dropdown-menu{
+	background-color: #015198;
+	color: white;
+}
+.navbar-nav > li > .dropdown-menu{
+	margin-top: -1px;
+	margin-left: -1px;
+}
+.navbar-nav > li > .dropdown-menu li a:hover
+.navbar-nav > li > .dropdown-menu li a:focus,
+.navbar-nav > li > .dropdown-menu li a:visited{
+	background-color: #da251c;
+}
+.navbar-nav .open .dropdown-menu{
+	background-color: #015198;
+}
+.navbar-nav .open .dropdown-menu li a{
+	color: white;
+}
+.navbar-default .navbar-nav .open .dropdown-menu > li > a{
+	color: #fff;
+}
+.navbar-default .navbar-nav .open .dropdown-menu > li > a:hover,
+.navbar-default .navbar-nav .open .dropdown-menu > li > a:focus{
+	color: #fff;
+	background-color: #da251c;
+}
+
 .btn.form-control{
 	border-radius:0px;
 }
@@ -30,4 +107,13 @@ body{
 .color-white,
 .color-5{
 	color:#fafaff;
+}
+
+.card{
+	background-color:white;
+	padding:20px;
+	border-radius: 2px;
+	margin:10px 0px 0px 0px;
+	box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+	transition: all 0.3s cubic-bezier(.25,.8,.25,1);
 }
