adds header style

--- a/assets/css/bootstrap-theme.css
+++ b/assets/css/bootstrap-theme.css
@@ -117,3 +117,14 @@ nav.navbar .nav li.open>a:active:visited
 	box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
 	transition: all 0.3s cubic-bezier(.25,.8,.25,1);
 }
+
+header.title{
+	background-color: #da251c;
+	padding: 60px 20px;
+	margin-bottom: 20px;
+}
+header.title h1{
+	color: white;
+	text-align: center;
+	padding: 10px;
+}
