changes footer content

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,30 +3,31 @@
 		<div class="row">
 			<div class="col-sm-3">
 				<p class="title">Mission</p>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Provident laboriosam ratione maxime quaerat incidunt molestiae, iusto odio temporibus eius ipsam.</p>
+				<p>To create and nurture a learning and knowledge based environment, conducive to the pursuit of quality education which would transform a socially responsible generation to act on their professional values and beliefs.</p>
 			</div>
 			<div class="col-sm-3">
 				<p class="title">About</p>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis sit modi explicabo illum. Modi voluptatibus iste ut minima temporibus perspiciatis?</p>
+				<p>The college is governed by a governing Board, the Chairman being Dr. Thomas P. John the son of the founder Mr. T. John. The other members of this governing Board are high-profile industrialists, financiers, entrepreneurs and renowned academicians.</p>
 			</div>	
 			<div class="col-sm-3">
 				<p class="title">Socialize</p>
 				<ul>
-					<li><a href="">Link Here 1</a></li>
-					<li><a href="">Link Here 2</a></li>
-					<li><a href="">Link Here 3</a></li>
-					<li><a href="">Link Here 4</a></li>
+					<li><a href="">Facebook</a></li>
+					<li><a href="">Twitter</a></li>
+					<li><a href="">Google+</a></li>
+					<li><a href="">LinkedIn</a></li>
+					<li><a href="">Instagram</a></li>
 				</ul>
 			</div>
 			<div class="col-sm-3">
 				<p class="title">Contact</p>
-				<p>
-					Address line 1 <br>
-					Address line 2 <br>
-					address line 3 <br>
-					PIN Number <br>
-					Phone : +91-999-000-11-22
-				</p>
+				#86/1<br>
+				Gottigere, Bannerghatta Road,
+				Bangalore, Karnataka, India.
+				560083,<br>
+				Phone No: 080-40250555<br>
+				Fax : 080-49030509<br>
+				<a href="http://www.tjohnit.com">www.tjohnit.com</a>www.tjohnit.com
 			</div>
 		</div>
 		<div class="row">
