changes footer sty

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -213,6 +213,9 @@ footer a:hover{
 	color: #ddd;
 	text-decoration: none;
 }
+footer .copyright{
+	font-weight: bold;
+}
 
 #placements .student img{
 	width: 100%;
