changes common data

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -27,11 +27,11 @@
 				560083,<br>
 				Phone No: 080-40250555<br>
 				Fax : 080-49030509<br>
-				<a href="http://www.tjohnit.com">www.tjohnit.com</a>www.tjohnit.com
+				<a href="http://www.tjohnit.com">www.tjohnit.com</a>
 			</div>
 		</div>
 		<div class="row">
-			<div class="col-sm-12"><p class="text-center">Made with love by TJIT Students</p></div>
+			<div class="col-sm-12 copyright"><p class="text-center">Made with love by TJIT Students</p></div>
 		</div>
 	</div>
 </footer>
