changes url to baseurl

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -8,7 +8,7 @@
 				<span class="icon-bar"></span>
 				<span class="icon-bar"></span>
 			</button>
-			<a class="navbar-brand" href="{{ site.url }}" title="T John Institute of Technology">TJIT</a>
+			<a class="navbar-brand" href="{{ site.baseurl }}" title="T John Institute of Technology">TJIT</a>
 		</div>
 
 		<!-- Collect the nav links, forms, and other content for toggling -->
@@ -18,73 +18,73 @@
 				<li class="dropdown">
 					<a href="#" class="dropdown-toggle" data-toggle="dropdown">Home<b class="caret"></b></a>
 					<ul class="dropdown-menu">
-						<li><a href="about.html">About Us</a></li>
-						<li><a href="objectives.html">Objectives</a></li>
-						<li><a href="founder.html">Founder</a></li>
-						<li><a href="history.html">History</a></li>
+						<li><a href="{{ site.baseurl }}/about.html">About Us</a></li>
+						<li><a href="{{ site.baseurl }}/objectives.html">Objectives</a></li>
+						<li><a href="{{ site.baseurl }}/founder.html">Founder</a></li>
+						<li><a href="{{ site.baseurl }}/history.html">History</a></li>
 						<li role="separator" class="divider"></li>
-						<li><a href="message-from-chairman.html">Message From Chairman</a></li>
-						<li><a href="message-from-principal.html">Message From Principal</a></li>
+						<li><a href="{{ site.baseurl }}/message-from-chairman.html">Message From Chairman</a></li>
+						<li><a href="{{ site.baseurl }}/message-from-principal.html">Message From Principal</a></li>
 					</ul>
 				</li>
 				
 				<li class="dropdown">
 					<a href="#" class="dropdown-toggle" data-toggle="dropdown">Departments<b class="caret"></b></a>
 					<ul class="dropdown-menu">
-						<li><a href="computer-science-and-engineering-department.html">Computer Science &amp; Engineering</a></li>
-						<li><a href="information-science-and-engineering-department.html">Information Science &amp; Engineering</a></li>
-						<li><a href="electronics-and-communication-engineering-department.html">Electronics &amp; Communication Engineering</a></li>
-						<li><a href="mechanical-engineering-department.html">Mechanical Engineering</a></li>
-						<li><a href="civil-engineering-department.html">Civil Engineering</a></li>
+						<li><a href="{{ site.baseurl }}/computer-science-and-engineering-department.html">Computer Science &amp; Engineering</a></li>
+						<li><a href="{{ site.baseurl }}/information-science-and-engineering-department.html">Information Science &amp; Engineering</a></li>
+						<li><a href="{{ site.baseurl }}/electronics-and-communication-engineering-department.html">Electronics &amp; Communication Engineering</a></li>
+						<li><a href="{{ site.baseurl }}/mechanical-engineering-department.html">Mechanical Engineering</a></li>
+						<li><a href="{{ site.baseurl }}/civil-engineering-department.html">Civil Engineering</a></li>
 						<li role="separator" class="divider"></li>
-						<li><a href="basic-science-department.html">Basic Science</a></li>
-						<li><a href="library-information-centre.html">Library Information Centre</a></li>
+						<li><a href="{{ site.baseurl }}/basic-science-department.html">Basic Science</a></li>
+						<li><a href="{{ site.baseurl }}/library-information-centre.html">Library Information Centre</a></li>
 					</ul>
 				</li>
 
 				<li class="dropdown">
 					<a href="#" class="dropdown-toggle" data-toggle="dropdown">Courses<b class="caret"></b></a>
 					<ul class="dropdown-menu">
-						<li><a href="bachelor-of-engineering.html">B.E</a></li>
-						<li><a href="master-of-technology.html">M.Tech</a></li>
+						<li><a href="{{ site.baseurl }}/bachelor-of-engineering.html">B.E</a></li>
+						<li><a href="{{ site.baseurl }}/master-of-technology.html">M.Tech</a></li>
 					</ul>
 				</li>
 
 				<li class="dropdown">
 					<a href="#" class="dropdown-toggle" data-toggle="dropdown">News<b class="caret"></b></a>
 					<ul class="dropdown-menu">
-						<li><a href="calendar-of-events.html">Calendar Of Events</a></li>
-						<li><a href="archived-events.html">Archived Events</a></li>
-						<li><a href="alumini.html">Alumini</a></li>
+						<li><a href="{{ site.baseurl }}/calendar-of-events.html">Calendar Of Events</a></li>
+						<li><a href="{{ site.baseurl }}/archived-events.html">Archived Events</a></li>
+						<li><a href="{{ site.baseurl }}/alumini.html">Alumini</a></li>
 					</ul>
 				</li>
 
 				<li class="dropdown">
 					<a href="#" class="dropdown-toggle" data-toggle="dropdown">Admissions<b class="caret"></b></a>
 					<ul class="dropdown-menu">
-						<li><a href="fee-structure.html">Fees Structure</a></li>
-						<li><a href="apply-online.html">Apply Online</a></li>
+						<li><a href="{{ site.baseurl }}/fee-structure.html">Fees Structure</a></li>
+						<li><a href="{{ site.baseurl }}/apply-online.html">Apply Online</a></li>
 					</ul>
 				</li>
 
 				<li class="dropdown">
 					<a href="#" class="dropdown-toggle" data-toggle="dropdown">Placement<b class="caret"></b></a>
 					<ul class="dropdown-menu">
-						<li><a href="placement-details.html">Placement Details</a></li>
-						<li><a href="our-recruiters.html">Our Recruiters</a></li>
-						<li><a href="statistics.html">Statistics</a></li>
+						<li><a href="{{ site.baseurl }}/placement-details.html">Placement Details</a></li>
+						<li><a href="{{ site.baseurl }}/our-recruiters.html">Our Recruiters</a></li>
+						<li><a href="{{ site.baseurl }}/statistics.html">Statistics</a></li>
 					</ul>
 				</li>
 				<li class="dropdown">
 					<a href="#" class="dropdown-toggle" data-toggle="dropdown">Clubs<b class="caret"></b></a>
 					<ul class="dropdown-menu">
-						<li><a href="department-of-ece.html">Department Of ECE</a></li>
-						<li><a href="department-of-cse.html">Department Of CSE</a></li>
+						<li><a href="{{ site.baseurl }}/department-of-ece.html">Department Of ECE</a></li>
+						<li><a href="{{ site.baseurl }}/department-of-cse.html">Department Of CSE</a></li>
 					</ul>
 				</li>
 			</ul>
 			<ul class="nav navbar-nav navbar-right">
-				<li><a href="contact.html">Contact Us</a></li>
+				<li><a href="{{ site.baseurl }}/contact.html">Contact Us</a></li>
 			</ul>
 		</div><!-- /.navbar-collapse -->
 	</div>
