--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -27,27 +27,27 @@
 						<li><a href="{{ site.baseurl }}/message-from-principal.html">Message From Principal</a></li>
 					</ul>
 				</li>
-				
+
 				<li class="dropdown">
 					<a href="#" class="dropdown-toggle" data-toggle="dropdown">Departments<b class="caret"></b></a>
 					<ul class="dropdown-menu">
+						<li class="dropdown-header">Under Graduate</li>
 						<li><a href="{{ site.baseurl }}/computer-science-and-engineering-department.html">Computer Science &amp; Engineering</a></li>
 						<li><a href="{{ site.baseurl }}/information-science-and-engineering-department.html">Information Science &amp; Engineering</a></li>
 						<li><a href="{{ site.baseurl }}/electronics-and-communication-engineering-department.html">Electronics &amp; Communication Engineering</a></li>
 						<li><a href="{{ site.baseurl }}/mechanical-engineering-department.html">Mechanical Engineering</a></li>
 						<li><a href="{{ site.baseurl }}/civil-engineering-department.html">Civil Engineering</a></li>
 						<li role="separator" class="divider"></li>
+						<li class="dropdown-header">Post Graduate</li>
+						<li role="separator" class="divider"></li>
+						<li class="dropdown-header">Basic Science</li>
 						<li><a href="{{ site.baseurl }}/basic-science-department.html">Basic Science</a></li>
-						<li><a href="{{ site.baseurl }}/library-information-centre.html">Library Information Centre</a></li>
+						<li><a href="{{ site.baseurl }}/library-information-centre.html">Library Information Center</a></li>
 					</ul>
 				</li>
 
-				<li class="dropdown">
-					<a href="#" class="dropdown-toggle" data-toggle="dropdown">Courses<b class="caret"></b></a>
-					<ul class="dropdown-menu">
-						<li><a href="{{ site.baseurl }}/bachelor-of-engineering.html">B.E</a></li>
-						<li><a href="{{ site.baseurl }}/master-of-technology.html">M.Tech</a></li>
-					</ul>
+				<li>
+					<a href="#">Infrastructure</a>
 				</li>
 
 				<li class="dropdown">
@@ -55,7 +55,7 @@
 					<ul class="dropdown-menu">
 						<li><a href="{{ site.baseurl }}/calendar-of-events.html">Calendar Of Events</a></li>
 						<li><a href="{{ site.baseurl }}/archived-events.html">Archived Events</a></li>
-						<li><a href="{{ site.baseurl }}/alumini.html">Alumini</a></li>
+						<li><a href="{{ site.baseurl }}/alumini.html">Alumni</a></li>
 					</ul>
 				</li>
 
@@ -73,13 +73,6 @@
 						<li><a href="{{ site.baseurl }}/placement-details.html">Placement Details</a></li>
 						<li><a href="{{ site.baseurl }}/our-recruiters.html">Our Recruiters</a></li>
 						<li><a href="{{ site.baseurl }}/statistics.html">Statistics</a></li>
-					</ul>
-				</li>
-				<li class="dropdown">
-					<a href="#" class="dropdown-toggle" data-toggle="dropdown">Clubs<b class="caret"></b></a>
-					<ul class="dropdown-menu">
-						<li><a href="{{ site.baseurl }}/department-of-ece.html">Department Of ECE</a></li>
-						<li><a href="{{ site.baseurl }}/department-of-cse.html">Department Of CSE</a></li>
 					</ul>
 				</li>
 			</ul>
