changes header color to white

--- a/assets/css/bootstrap-theme.css
+++ b/assets/css/bootstrap-theme.css
@@ -83,6 +83,9 @@ nav.navbar .nav li.open>a:active:visited
 	color: #fff;
 	background-color: #da251c;
 }
+.navbar-default .dropdown-header{
+	color: #fff;
+}
 .navbar-toggle{
 	border-radius: 0px;
 }
@@ -93,7 +96,6 @@ nav.navbar .nav li.open>a:active:visited
 .navbar-default .navbar-toggle:hover{
 	background-color: #015198;
 }
-
 
 .btn.form-control{
 	border-radius:0px;
