--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -8,7 +8,7 @@
 				<span class="icon-bar"></span>
 				<span class="icon-bar"></span>
 			</button>
-			<a class="navbar-brand" href="{{ site.baseurl }}" title="T John Institute of Technology">TJIT</a>
+			<a class="navbar-brand" href="{{ site.baseurl }}/" title="T John Institute of Technology">TJIT</a>
 		</div>
 
 		<!-- Collect the nav links, forms, and other content for toggling -->
