--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>T John Institute of Technology</title>
+	<title>T John Institute Of Technology</title>
 	<meta charset="UTF-8">
 	<meta name="theme-color" content="#DA251C">
-	<meta name="chumm">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+
+	<meta name="keywords" content="tjit,engineering,bangalore,be,campus,tjohn">
+	<meta name="description" content="{{ site.description }}">
+	
 	<link rel="stylesheet" href="{{ site.baseurl }}/assets/css/bootstrap.min.css">
 	<link rel="stylesheet" href="{{ site.baseurl }}/assets/css/bootstrap-theme.css">
 	<link rel="stylesheet" href="{{ site.baseurl }}/assets/css/style.css">
