--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -32,11 +32,11 @@
 					<a href="#" class="dropdown-toggle" data-toggle="dropdown">Departments<b class="caret"></b></a>
 					<ul class="dropdown-menu">
 						<li class="dropdown-header">Under Graduate</li>
-						<li><a href="{{ site.baseurl }}/computer-science-and-engineering-department.html">Computer Science &amp; Engineering</a></li>
-						<li><a href="{{ site.baseurl }}/information-science-and-engineering-department.html">Information Science &amp; Engineering</a></li>
-						<li><a href="{{ site.baseurl }}/electronics-and-communication-engineering-department.html">Electronics &amp; Communication Engineering</a></li>
-						<li><a href="{{ site.baseurl }}/mechanical-engineering-department.html">Mechanical Engineering</a></li>
-						<li><a href="{{ site.baseurl }}/civil-engineering-department.html">Civil Engineering</a></li>
+						<li><a href="{{ site.baseurl }}/cs/">Computer Science &amp; Engineering</a></li>
+						<li><a href="{{ site.baseurl }}/is/">Information Science &amp; Engineering</a></li>
+						<li><a href="{{ site.baseurl }}/ec/">Electronics &amp; Communication Engineering</a></li>
+						<li><a href="{{ site.baseurl }}/me/">Mechanical Engineering</a></li>
+						<li><a href="{{ site.baseurl }}/cv/">Civil Engineering</a></li>
 						<li role="separator" class="divider"></li>
 						<li class="dropdown-header">Post Graduate</li>
 						<li role="separator" class="divider"></li>
